--- a/NatTypeTester-Console/NatTypeTester_Console.csproj
+++ b/NatTypeTester-Console/NatTypeTester_Console.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net472;net48;netcoreapp3.1</TargetFrameworks>
     <RootNamespace>NatTypeTester_Console</RootNamespace>
+    <AssemblyName>NTT</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
